--- a/api/Resume_Screening.ipynb
+++ b/api/Resume_Screening.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -13,11 +13,11 @@
       "Requirement already satisfied: matplotlib in /home/john/anaconda3/lib/python3.8/site-packages (from wordcloud) (3.2.2)\n",
       "Requirement already satisfied: pillow in /home/john/anaconda3/lib/python3.8/site-packages (from wordcloud) (7.2.0)\n",
       "Requirement already satisfied: numpy>=1.6.1 in /home/john/anaconda3/lib/python3.8/site-packages (from wordcloud) (1.18.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /home/john/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2.8.1)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /home/john/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (1.2.0)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/john/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2.4.7)\n",
       "Requirement already satisfied: cycler>=0.10 in /home/john/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (0.10.0)\n",
-      "Requirement already satisfied: six>=1.5 in /home/john/anaconda3/lib/python3.8/site-packages (from python-dateutil>=2.1->matplotlib->wordcloud) (1.15.0)\n"
+      "Requirement already satisfied: python-dateutil>=2.1 in /home/john/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2.8.1)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/john/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2.4.7)\n",
+      "Requirement already satisfied: six in /home/john/anaconda3/lib/python3.8/site-packages (from cycler>=0.10->matplotlib->wordcloud) (1.15.0)\n"
      ]
     }
    ],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,13 @@
     "from sklearn.metrics import accuracy_score\n",
     "from pandas.plotting import scatter_matrix\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +137,7 @@
        "4                 "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -192,11 +193,11 @@
       "HR                           44\n",
       "Hadoop                       42\n",
       "ETL Developer                40\n",
-      "Blockchain                   40\n",
+      "Operations Manager           40\n",
+      "Mechanical Engineer          40\n",
       "Data Science                 40\n",
       "Sales                        40\n",
-      "Mechanical Engineer          40\n",
-      "Operations Manager           40\n",
+      "Blockchain                   40\n",
       "Arts                         36\n",
       "Database                     33\n",
       "PMO                          30\n",
@@ -206,8 +207,8 @@
       "DotNet Developer             28\n",
       "Automation Testing           26\n",
       "Network Security Engineer    25\n",
-      "Civil Engineer               24\n",
       "SAP Developer                24\n",
+      "Civil Engineer               24\n",
       "Advocate                     20\n",
       "Name: Category, dtype: int64\n"
      ]
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +358,7 @@
        "4  Education Details MCA YMCAUST Faridabad Haryan...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +512,7 @@
        "4  Education Details MCA YMCAUST Faridabad Haryan...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -549,13 +550,22 @@
     "word_vectorizer.fit(requiredText)\n",
     "WordFeatures = word_vectorizer.transform(requiredText)\n",
     "\n",
-    "\n",
     "print (\"Feature completed .....\")\n",
     "\n",
     "X_train,X_test,y_train,y_test = train_test_split(WordFeatures,requiredTarget,random_state=42, test_size=0.2,\n",
     "                                                 shuffle=True, stratify=requiredTarget)\n",
     "print(X_train.shape)\n",
     "print(X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save Vectorizer\n",
+    "# pickle.dump(word_vectorizer, open('tfidf_vectorizer.pkl', 'wb'))"
    ]
   },
   {
@@ -567,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +671,7 @@
        "RandomForestClassifier(criterion='entropy', random_state=2)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +762,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,17 +785,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "pickle.dump(nv, open('nb_model.pkl', 'wb'))"
+    "# pickle.dump(nv, open('nb_model.pkl', 'wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -833,6 +842,134 @@
    "source": [
     "print(\"\\n Classification report for classifier %s:\\n%s\\n\" % \n",
     "      (nv, metrics.classification_report(y_test, y_pred_nb)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = 'Expertise â Data and Quantitative Analysis â Decision Analytics â Predictive Modeling â Data-Driven Personalization â KPI Dashboards â Big Data Queries and Interpretation â Data Mining and Visualization Tools â Machine Learning Algorithms â Business Intelligence (BI) â Research, Reports and Forecasts Education Details PGP in Data Science  Mumbai, Maharashtra Aegis School of data science & BusinessB.E. in Electronics & Communication Electronics & Communication Indore, Madhya Pradesh IES IPS Academy Data Scientist Skill Details'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_sample = cleanResume(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Expertise Data and Quantitative Analysis Decision Analytics Predictive Modeling Data Driven Personalization KPI Dashboards Big Data Queries and Interpretation Data Mining and Visualization Tools Machine Learning Algorithms Business Intelligence BI Research Reports and Forecasts Education Details PGP in Data Science Mumbai Maharashtra Aegis School of data science BusinessB E in Electronics Communication Electronics Communication Indore Madhya Pradesh IES IPS Academy Data Scientist Skill Details'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_sample = [cleaned_sample]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1x7351 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 45 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorized_text = word_vectorizer.transform(cleaned_sample)\n",
+    "vectorized_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_pred = nv.predict(vectorized_text.todense()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Data Science'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "le.inverse_transform(sample_pred)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save Label Encoder\n",
+    "# pickle.dump(le, open('label_encoder.pkl', 'wb'))"
    ]
   },
   {
