--- a/api/Resume_Screening.ipynb
+++ b/api/Resume_Screening.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "4                 "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -192,19 +192,19 @@
       "Web Designing                45\n",
       "HR                           44\n",
       "Hadoop                       42\n",
-      "ETL Developer                40\n",
-      "Operations Manager           40\n",
-      "Mechanical Engineer          40\n",
       "Data Science                 40\n",
+      "Mechanical Engineer          40\n",
+      "ETL Developer                40\n",
       "Sales                        40\n",
       "Blockchain                   40\n",
+      "Operations Manager           40\n",
       "Arts                         36\n",
       "Database                     33\n",
-      "PMO                          30\n",
-      "Health and fitness           30\n",
       "Electrical Engineering       30\n",
-      "Business Analyst             28\n",
+      "Health and fitness           30\n",
+      "PMO                          30\n",
       "DotNet Developer             28\n",
+      "Business Analyst             28\n",
       "Automation Testing           26\n",
       "Network Security Engineer    25\n",
       "SAP Developer                24\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "4  Education Details MCA YMCAUST Faridabad Haryan...  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "4  Education Details MCA YMCAUST Faridabad Haryan...  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "RandomForestClassifier(criterion='entropy', random_state=2)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -846,16 +846,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = 'Expertise â Data and Quantitative Analysis â Decision Analytics â Predictive Modeling â Data-Driven Personalization â KPI Dashboards â Big Data Queries and Interpretation â Data Mining and Visualization Tools â Machine Learning Algorithms â Business Intelligence (BI) â Research, Reports and Forecasts Education Details PGP in Data Science  Mumbai, Maharashtra Aegis School of data science & BusinessB.E. in Electronics & Communication Electronics & Communication Indore, Madhya Pradesh IES IPS Academy Data Scientist Skill Details'"
+    " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,16 +864,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Expertise Data and Quantitative Analysis Decision Analytics Predictive Modeling Data Driven Personalization KPI Dashboards Big Data Queries and Interpretation Data Mining and Visualization Tools Machine Learning Algorithms Business Intelligence BI Research Reports and Forecasts Education Details PGP in Data Science Mumbai Maharashtra Aegis School of data science BusinessB E in Electronics Communication Electronics Communication Indore Madhya Pradesh IES IPS Academy Data Scientist Skill Details'"
+       "'The quick brown fox jumped over the lazy dog'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,17 +893,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<1x7351 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 45 stored elements in Compressed Sparse Row format>"
+       "\twith 3 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,16 +924,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6])"
+       "array([4])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,16 +944,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Data Science'"
+       "'Business Analyst'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
